--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+README-template.md
+READMEoriginal.md
+style-guide.md
 # Avoid accidental Sketch file upload 
 ###############################################
 ## Please do not remove line 5 - thanks! 🙂 ##
